--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,8 @@
 # ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
 DATABASE_URL=
-SESSION_ID=
+SESSION_ID= guru322
 REMOVEBG_KEY=
-PREFIX=
-MODE=
-autoRead=
-statusview=
+PREFIX=.
+MODE=public
+autoRead=false
+statusview=true
